src/pallets/static/style.css
header {
  border-bottom: 1px solid var(--pico-muted-border-color);
  margin-bottom: 1.8rem;
}

header nav a {
  text-decoration: none;
}

header nav a.logo {
  padding-top: 0;
  padding-bottom: 0;
}

header nav a.logo img {
  width: 3em;
}

header nav {
  display: flex;
  justify-content: space-between;
  justify-items: center;
  padding: 0;
  margin: 0;
}

header nav ul {
  padding: 0 1rem;
}

@media (max-width: 767px) {
  header nav {
    overflow-x: hidden;
  }

  header nav a.logo img {
    width: 3em;
  }
}

.logo {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

main {
  padding: 0 1rem !important;
}

.projects {
  padding: 1.25rem 1.25rem 0.5rem 1.25rem;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.8rem;
  flex-wrap: wrap;
}

.projects p {
  margin: 0;
  padding: 0;
}

.projects a {
  display: inline-flex;
  width: 100%;
  padding: 0.5rem 1rem 0.5rem 0.5rem;
  gap: 0.8rem;
  align-items: center;
  text-decoration: none;
  border-radius: 0.25rem;
  background-color: rgba(142, 142, 142, 0.05);
}

.projects a:hover {
  background-color: rgba(142, 142, 142, 0.1);
}

@media (max-width: 1024px) {
  .projects {
    grid-template-columns: repeat(2, 1fr);
    gap: 0.5rem;
    padding: 0.5rem;
  }
}

@media (max-width: 767px) {
  .projects {
    grid-template-columns: repeat(1, 1fr);
    gap: 0.5rem;
    padding: 2rem 0.5rem;
  }
}

footer {
  border-top: 1px solid var(--pico-muted-border-color);
  margin-top: 1.8rem;
  font-size: 0.75rem;
  align-items: start;
}

footer ul {
  padding-top: 1.5rem;
  display: grid;
}

footer ul li {
  list-style-type: none;
}

.title-replace {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

